WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
318127
[MediaStream] OverconstrainedError does not inherit from DOMException and has no code attribute
https://bugs.webkit.org/show_bug.cgi?id=318127
Summary
[MediaStream] OverconstrainedError does not inherit from DOMException and has...
Eric Carlson
Reported
2026-06-29 12:11:20 PDT
OverconstrainedError does not inherit from DOMException and has no code attribute
Attachments
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2026-06-29 12:11:36 PDT
rdar://180728516
Eric Carlson
Comment 2
2026-06-29 12:19:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/68111
EWS
Comment 3
2026-07-06 13:47:00 PDT
Committed
316578@main
(525dd980ce78): <
https://commits.webkit.org/316578@main
> Reviewed commits have been landed. Closing PR #68111 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug